--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/store?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
+
+store.minio.endpoint=http://localhost:9000/
+store.minio.accessKey=admin
+store.minio.secretKey=admin123456
